Fixing the video size out of bound

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,6 +43,6 @@ code {
   }
 
   #project-container {
-    padding-right: 0px;
+    padding-right: 20px;
   }
 }
